--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
     "auth": "^1.2.3",
+    "axios": "^1.7.9",
     "install": "^0.13.0",
+    "mongoose": "^8.9.0",
     "next": "15.1.0",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
